--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p class="">If You Want to know about yourself</p>
     <button  class="btn btn-wide">Click Here!!</button>
     <div class="hidden text-3xl lg:text-4xl font-bold">Asif Vaiya told me</div>
-    <div class="hidden text-4xl lg:text-6xl font-bold">Saisa Apu is Cute</div>
+    <div class="hidden text-4xl lg:text-6xl font-bold text-center">Saisa Apu is Cute</div>
     <div class="hidden text-3xl lg:text-4xl font-bold">Ummmmmmah!!</div>
     <script src="fun.js"></script>
 </body>
