--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body class="flex items-center flex-col justify-center gap-10" >
     <p class="text-4xl">Hello,I am Asifs Cat.</p>
     <p class="">If You Want to know about yourself</p>
-    <button  class="btn btn-wide">Click Here!!</button>
-    <div class="hidden text-3xl lg:text-4xl font-bold">Asif Vaiya told me</div>
-    <div class="hidden text-4xl lg:text-6xl font-bold text-center">Saisa Apu is Cute</div>
-    <div class="hidden text-3xl lg:text-4xl font-bold">Ummmmmmah!!</div>
+    <button  class="btn btn-wide text-center">Click Here!!</button>
+    <div class="hidden text-3xl lg:text-4xl font-bold text-center">Asif Vaiya told me</div>
+    <div class="hidden text-4xl lg:text-6xl font-bold text-center text-center">Saisa Apu is Cute</div>
+    <div class="hidden text-3xl lg:text-4xl font-bold text-center">Ummmmmmah!!</div>
     <script src="fun.js"></script>
 </body>
 </html>
